# ansible-infrastructure-collection

./: .ansible-lint  .gitignore  CHANGELOG.md  Pipfile  Pipfile.lock.license  README.md  REUSE.toml  galaxy.yml  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test.yml
.reuse/: dep5
LICENSES/: GPL-3.0-or-later.txt
meta/: runtime.yml
plugins/: README.md
plugins/module_utils/: aptly.py
plugins/modules/: aptly_mirror.py  aptly_repository.py  gpg_key.py  gpg_key.py.license
roles/aptly/: README.md
roles/aptly/defaults/: main.yml
roles/aptly/handlers/: main.yml
roles/aptly/meta/: main.yml
roles/aptly/tasks/: gpg.yml  install.yml  main.yml  mirror.yml  repository.yml
roles/aptly/templates/: aptly.conf.j2  aptly.service.j2
roles/aptly/tests/: test.yml
roles/aptly/vars/: main.yml
roles/ca_certificates/defaults/: main.yml
roles/ca_certificates/handlers/: main.yml
roles/ca_certificates/meta/: main.yml
roles/ca_certificates/tasks/: dependencies.yml  main.yml
roles/ca_certificates/tests/: test.yml
roles/create_folder/defaults/: main.yml
roles/create_folder/handlers/: main.yml
roles/create_folder/meta/: main.yml
roles/create_folder/tasks/: main.yml
roles/create_folder/tests/: test.yml
roles/create_folder/vars/: main.yml
roles/dns/defaults/: main.yaml
roles/dns/tasks/: main.yaml
roles/dns/templates/: resolv.conf.j2
roles/minio/: LICENSE.old  README.md
roles/netbird/: README.md
roles/oncall/: README.md
roles/pyroscope/: README.md
roles/set_fact/: README.md
roles/tempo/: README.md
(+119 files in other folders)
